# protot

./: .gitignore  CMakeLists.txt  README.md  notes.txt
data/models/: anim.csv  model.lua
data/shaders/: Makefile  fs_blur_ssao.glsl  fs_default.glsl  fs_deferred_geometry.glsl  fs_deferred_lighting.glsl  fs_depthbuffer.glsl  fs_shadowmap.frag  fs_simple.glsl  fs_simpletexture.glsl  fs_ssao.glsl  vs_default.glsl  vs_deferred_geometry.glsl  vs_passthrough.glsl  vs_shadowmap.vert  vs_simple.glsl
data/shaders/debug/: Makefile
data/shaders/lines/: Makefile  fs_lines.sc  fs_lines_occluded.sc
data/shaders/scene/: Makefile  vs_sms_mesh_textured.sc
data/shaders/shadowmap/: Makefile
data/shaders/skybox/: Makefile  fs_ibl_skybox.sc
data/shaders/src/: mesh.out  varying.def.sc
scripts/: trigger_reload.sh
shaders/draw_shadowmap/: varying.def.sc
shaders/glsl/: fs_sms_mesh.bin.orig
shaders/lines/: fs_lines_occluded.sc  varying.def.sc  vs_lines.sc
shaders/scene/: fs_sms_mesh_textured.sc
shaders/src/: Makefile  fs_debug.sc  fs_sms_mesh_pd_textured.sc  fs_sms_shadow.sh  fs_sms_shadow.sh.orig  varying.def.sc  vs_debug.sc  vs_sms_mesh.sc  vs_sms_mesh_textured.sc
src/: FileModificationObserver.h  Globals.h  ModuleManager.cc  ModuleManager.h  RenderUtils.cc  RenderUtils.h  Renderer.cc  Renderer.h  RuntimeModule.h  RuntimeModuleManager.cc  RuntimeModuleManager.h  Scene.cc  Scene.h  SceneObject.cpp  SceneObject.h  Serializer.cc  Serializer.h  TestModule.cc  TestModule.cpp  Timer.h  Utils.cc  Utils.h  main.cc  main_glfw.cc  math_types.h  protot_config.h.cmake  shaderc.h  shaderc_compile.cpp  shaderc_glsl.cpp
src/SimpleMath/: SimpleMath.h  SimpleMathBlock.h.orig  SimpleMathDynamic.h.orig  SimpleMathFixed.h  SimpleMathFixed.h.orig  SimpleMathGL.h  SimpleMathQR.h
src/SimpleMathOld/: SimpleMath.h  SimpleMathGL.h
src/modules/: CMakeLists.txt  CharacterModule.cc  CharacterModule.h  LuaTableTypes.h  RenderCommands.cc  RenderCommands.h  RenderCommands_p.h  RenderModule.cc  RenderModule.h  RenderUtils.cc  RenderUtils.h  SceneModule.c  TestModule.cc  autorebuild.sh  gltf_implementation.cc  imgui_protot_ext.h
src/rcpp/: IUpdateable.h  InterfaceIds.h  StdioLogSystem.h
tests/: CMakeLists.txt  RenderModuleTests.cc  TestUtils.h
